--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fuzzywuzzy==0.18.0
 odfpy==1.4.1
 pandas==1.3.3
 pg8000==1.21.2
-python-Levenshtein==0.12.2
+rapidfuzz==1.7.1
+python-Levenshtein
 tabulate==0.8.9
